# lpm

./: HACKING  NEWS  PKGBUILD  README  RELEASE  TRANSLATORS  build.lpm  lpm.conf  makepkg.conf  meson.build  meson_options.txt  pacman.conf  valgrind.supp
.tx/: config
build-aux/: update-copyright
doc/: BUILDINFO.5.asciidoc  Doxyfile.in  PKGBUILD.5.asciidoc  alpm-hooks.5.asciidoc  asciidoc.conf  build.lpm.5.asciidoc  footer.asciidoc  index.asciidoc  lpm-conf.8.asciidoc  lpm-db-upgrade.8.asciidoc  lpm-key.8.asciidoc  lpm.8.asciidoc  lpm.conf.5.asciidoc  makepkg-template.1.asciidoc  makepkg.8.asciidoc  makepkg.conf.5.asciidoc  meson.build  repo-add.8.asciidoc  submitting-patches.asciidoc  testpkg.8.asciidoc  translation-help.asciidoc  vercmp.8.asciidoc
etc/: .gitignore  lpm.conf.in  makepkg.conf.in
proto/: PKGBUILD-vcs.proto  build.lpm-split.proto  build.lpm-vcs.proto  build.lpm.proto
scripts/: .gitignore  libmakepkg.pc.in  lpm-db-upgrade.sh.in  lpm-key.sh.in  makepkg-template.pl.in  makepkg.sh.in  meson.build  repo-add.sh.in
src/lpm/: .gitignore  callback.c  callback.h  check.c  conf.c  database.c  deptest.c  files.c  lpm-conf.c  lpm.c  lpm.h  meson.build  package.c  package.h  query.c  remove.c  sighandler.c  sync.c  upgrade.c  util.c
src/lpm/po/: Makevars  POTFILES.in  ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lpm.pot  lt.po  meson.build  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
(+514 files in other folders)
