lpm_sources = files('''
  check.h check.c
  conf.h conf.c
  database.c
  deptest.c
  files.c
  package.h package.c
  lpm.h lpm.c
  query.c
  remove.c
  sighandler.h sighandler.c
  sync.c
  callback.h callback.c
  upgrade.c
  util.h util.c
'''.split())

lpm_conf_sources = files('''
  lpm-conf.c
  util.h util.c
  callback.h callback.c
  conf.h conf.c
'''.split())
